EDU-1269 Fix cards wrapping on mobile

--- a/src/components/dashboard/favorites-tab.less
+++ b/src/components/dashboard/favorites-tab.less
@@ -28,12 +28,5 @@
 
 .FavoritesTab-cards {
   .m-section-content;
-
-  &.FavoritesTab-cards--small {
-    .m-card-wrapper;
-  }
-
-  &.FavoritesTab-cards--wide {
-    .m-card-wrapper-wide;
-  }
+  .m-card-wrapper;
 }
